# ecosnail

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CMakeSettings.json  ecosnail.sln  gen-repo-doc.py  readme.md  snail
cmake/: project.cmake
config/: config.sln
config/examples/example_01_hello/: Makefile  example_01_hello.vcxproj  example_01_hello.vcxproj.filters
config/src/: src.vcxproj  src.vcxproj.filters  test.cfg
config/src/tests/: read_test.cpp
config/test/: Makefile
projects/: CMakeLists.txt
projects/argo/examples/: basic.cpp
projects/blabla/: blabla.vcxproj  blabla.vcxproj.filters
projects/config/: README.md  src.vcxproj  src.vcxproj.filters
projects/config/doc/: config.ebnf
projects/config/test/: test_01.cpp
projects/dimentia/examples/: running_square.cpp
projects/dimentia/tests/: CMakeLists.txt  (+1 more)
projects/evening/: CMakeLists.txt
projects/nyaason/: parser.vcxproj  parser.vcxproj.filters
projects/tail/: containers.vcxproj.filters
projects/tempo/: metronome.cpp
projects/tops/: parser.vcxproj  parser.vcxproj.filters  test.tops
sandbox/: sandbox.vcxproj
src/: CMakeLists.txt
src/argo/: CMakeLists.txt
src/argo/include/ecosnail/: argo.hpp
src/argo/include/ecosnail/argo/: argument.hpp  data.hpp  flag.hpp  option.hpp  option_iterator.hpp  parser.hpp
src/argo/tests/: CMakeLists.txt  basic.cpp
src/blabla/: CMakeLists.txt
src/config/: Doxyfile
src/config/sample/example_01_hello/: hello.cpp
src/dimentia/: CMakeLists.txt
src/dimentia/examples/: simple.cpp
src/dimentia/include/ecosnail/: dimentia.hpp
src/dimentia/include/ecosnail/dimentia/: dimension.hpp  dimented.hpp  dimented_decl.hpp  dimented_traits.hpp
src/dimentia/include/ecosnail/dimentia/internal/: dimension_traits.hpp
src/dimentia/tests/: CMakeLists.txt  common.hpp  construction.cpp  dimentia_test.cpp  result_types.cpp
src/evening/: CMakeLists.txt
src/evening/include/ecosnail/: evening.hpp
src/evening/tests/: CMakeLists.txt  container.cpp  subscriber.cpp  subscription.cpp
src/fuzz/: CMakeLists.txt
src/fuzz/include/ecosnail/fuzz/: defunction.hpp
src/fuzz/tests/: CMakeLists.txt  test.cpp
src/mef/: CMakeLists.txt
src/mef/include/ecosnail/: mef.hpp
src/tail/: CMakeLists.txt
src/tail/examples/: 01_hetero_pack.cpp  CMakeLists.txt
src/tail/examples/01_hetero_pack/: CMakeLists.txt  main.cpp
src/tail/include/ecosnail/: tail.hpp
src/tail/include/ecosnail/tail/: hetero_pack.hpp  key_range.hpp  type_set.hpp  type_vector.hpp  types.hpp  vector.hpp
src/tail/include/ecosnail/tail/internal/: utils.hpp
src/tail/tests/: CMakeLists.txt  tail_test.cpp  vector_test.cpp
src/tempo/: CMakeLists.txt  frame_timer.cpp
src/tempo/include/ecosnail/: tempo.hpp
src/tempo/include/ecosnail/tempo/: frame_timer.hpp  metronome.hpp
src/thing/: CMakeLists.txt  entity_pool.cpp
src/thing/include/ecosnail/thing/: component_map.hpp  entity.hpp  entity_manager.hpp  range.hpp
src/thing/tests/: basic.cpp
src/tops/src/parser/: parser.hpp  tops.hpp
tail/: containers.vcxproj
(+48 files in other folders)
